<resources>
    <string name="app_name">SafeChat</string>
    <string name="close">Close</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="donthave">Don\'t Have an Account?</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="open">Open</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
